# xbat

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: arg_parse.rs  handle.rs  main.rs  work_opts.rs
