[package]
name = "xbat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.0"
nix = "0.26.1"
lazy_static = "1.4.0"

[dependencies.clap]
version = "4.0.29"
default-features = false
features = ["std", "suggestions","derive"]