[package]
name = "xbat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.0"
lazy_static = "1.4.0"
# libc = "0.2.138"

[dependencies.nix]
version = "0.26.1"
default-features = false
features = ["process"]

# [dependencies.clap]
# version = "4.0.29"
# default-features = false
# features = ["std", "suggestions","derive"]
